<resources>
    <string name="app_name">Language Translator</string>
    <string name="app_title">All Language\n      Translator</string>
    <string name="home" translatable="true">Translate</string>
    <string name="closeDrawer">closeDrawer</string>
    <string name="openDrawer">openDrawer</string>
    <string name="ad_is_loading">Ad is Loading</string>
    <string name="shareVia">Share via</string>
    <string name="LanguageTranslator">Language Translator</string>
    <string name="Translate">Translate</string>
    <string name="Conversation">Conversation</string>
    <string name="OCR">OCR</string>
    <string name="Dictionary">Dictionary</string>
    <string name="SearchWord">Search word</string>
    <string name="ShareWithFriends">Share with Friends</string>
    <string name="ChangeLanguage">Change Language</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="Gallery">Gallery</string>
    <string name="Camera">Camera</string>
    <string name="DoYouWantToExit">Do you want to exit</string>
    <string name="Cancel">Cancel</string>
    <string name="Exit">Exit</string>
    <string name="SelectAppLanguage">Select App Language</string>
    <string name="Ok">OK</string>
    <string name="Copy">Copy</string>
    <string name="FullScreen">Full Screen</string>
    <string name="ClearTitle">Clear</string>
    <string name="ClearConversationMsg">Are you sure you want to clear the conversation?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="SelectLanguage">Select Language</string>
    <string name="Downloading">Downloading</string>
    <string name="DownloadDialogMsg">Please wait while your model is downloading</string>
    <string name="Download">Download</string>
    <string name="DownloadModel">Download Model</string>
    <string name="DownloadModelDialogMsg">You need to download the model first before you select this language</string>
    <string name="UseWifiMsg">You are using cellular network. Please use Wifi to download the model</string>
    <string name="Searching">Searching</string>
    <string name="NotFound">Not Found</string>
    <string name="Image">Image :</string>
    <string name="PleaseConnectToInternet">Please connect to internet</string>
    <string name="NotFoundMsg">The word you are looking for is not found in our dictionary</string>
    <string name="NoTextFoundToShare">No text found to share</string>
    <string name="NoTranslationFoundToShare">No translation found to share</string>
    <string name="NoTranslationFoundToCopy">No translation found to copy</string>
    <string name="NoTextFoundToCopy">No text found to copy</string>
    <string name="NoTextToSpeak">No text to speak</string>
    <string name="LanguageDetected">Language Detected</string>
    <string name="OCRImage">OCR Image</string>
    <string name="OCRTranslation">OCR Translation</string>
    <string name="CopiedToClipboard">Copied to clipboard</string>
    <string name="ChooseLanguageFirst">Choose Language first before you proceed any further</string>
    <string name="EnterTextToTranslate">Enter text to translate</string>
    <string name="TextFromImage">Text from image</string>
    <string name="GettingText">Getting text</string>
    <string name="PleaseEnterWordToSearchInDictionary">Please enter some word to search</string>
    <string name="Translating">Translating</string>
    <string name="PermissionsNotGranted">Permissions not granted</string>
    <string name="CameraPermissionsMsg">Please grant camera permissions to capture image</string>
    <string name="StoragePermissionsMsg">Please grant internal storage permissions to get image from gallery</string>
    <string name="GrantPermissionsBtn">Grant Permissions</string>
    <string name="speakText">speakText</string>
    <string name="ooooppss_network_not_available">Ooooppss Network not Available</string>
    <string name="internet_warning_message">Oops Internet Not Connected . Please connect to the internet for dictionary usage</string>
    <string name="title_activity_testing_bottom">testingBottom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>