<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.wonderapps.translator.screens.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_OCRFragment"
            app:destination="@id/OCRFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/conversionFragment"
        android:name="com.wonderapps.translator.screens.fragments.ConversionFragment"
        android:label="@string/Conversation"
        tools:layout="@layout/fragment_conversion" >

    </fragment>
    <fragment
        android:id="@+id/OCRFragment"
        android:name="com.wonderapps.translator.screens.fragments.OCRFragment"
        android:label="@string/OCR"
        tools:layout="@layout/fragment_o_c_r" >

    </fragment>
    <fragment
        android:id="@+id/dictionaryFragment"
        android:name="com.wonderapps.translator.screens.fragments.DictionaryFragment"
        android:label="@string/Dictionary"
        tools:layout="@layout/fragment_dictionary" />
</navigation>