<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DoYouWantToExit"
        android:textColor="@color/black"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/Exit"
        android:textColor="@color/white"
        android:padding="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/Cancel"
        android:textColor="@color/purple_500"
        android:backgroundTint="@color/white"
        android:layout_marginRight="120dp"
        android:layout_toLeftOf="@+id/exitBtn"
        android:layout_marginBottom="25dp"
        android:textSize="15sp"
        android:textStyle="bold"/>



</RelativeLayout>